--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,35 @@
   -webkit-text-size-adjust: 100%;
 }
 
-html, body, #root {
+html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
   touch-action: pan-y;
 }
 
-/* Main Container */
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
 .container {
   position: fixed;
+
+  align-items: center;
+  justify-content: center;
+
+
+
   top: 0;
   left: 0;
   right: 0;
